Implementacion de  requisitos opcionales
